--- a/test.html
+++ b/test.html
@@ -1,60 +1,12 @@
-<!-- HTML entities -->
-&lt;h1&gt; TEST &lt;/h1&gt;
-<br>
-
-<!-- Decimal entities -->
-&#60;h1&#62; TEST &#60;/h1&#62;
-<br>
-
-<!-- Hexadecimal entities -->
-&#x3C;h1&#x3E; TEST &#x3C;/h1&#x3E;
-<br>
-
-<!-- URL encoding -->
-%3Ch1%3E%20TEST%20%3C/h1%3E
-<br>
-
-<!-- Base64 encoding -->
-<script>document.write(atob('PGgxPiBURVNUIDwvaDE+'));</script>
-<br>
-
-<!-- Unicode escapes -->
-\u003Ch1\u003E TEST \u003C/h1\u003E
-<br>
-
-<!-- ASCII codes -->
-<script>
-    document.write(
-        String.fromCharCode(60) + 'h1' + String.fromCharCode(62) +
-        ' TEST ' +
-        String.fromCharCode(60) + '/h1' + String.fromCharCode(62)
-    );
-</script>
-<br>
-
-<!-- Binary to char -->
-<script>
-    document.write(
-        String.fromCharCode(parseInt('111100', 2)) + 'h1' +
-        String.fromCharCode(parseInt('111110', 2)) + ' TEST ' +
-        String.fromCharCode(parseInt('111100', 2)) + '/h1' +
-        String.fromCharCode(parseInt('111110', 2))
-    );
-</script>
-<br>
-
-<!-- Octal escape sequences (Note: deprecated in strict mode) -->
-\74h1\76 TEST \74/h1\76
-<br>
-
-$(function() {
-$('#backLink').attr("href", (new URLSearchParams(window.location.search)).get('returnPath'));
-});decodeURIComponent('window.location.hash.slice(1)'';prompt(1)//) + ')'
-
-what does this do?
-<script>
-    $(window).on('hashchange', function () {
-        var post = $('section.blog-list h2:contains(' + decodeURIComponent(window.location.hash.slice(1)));window.alert(1)//  " ) + ')');
-        if (post) post.get(0).scrollIntoView();
-    });
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+    <a&#10;href="javascript:alert(1)">click me</a>
+</body>
+</html>
