added multiple encoder/decoders

--- a/index.html
+++ b/index.html
@@ -216,6 +216,16 @@
                                                 <option value="b64-d">Base64 decode</option>
                                                 <option value="uri-e">URI encode</option>
                                                 <option value="uri-d">URI decode</option>
+                                                <option value="unicode-e">Unicode encode</option>
+                                                <option value="unicode-d">Unicode decode</option>
+                                                <option value="hexjs-e">Hex JS encode</option>
+                                                <option value="hexjs-d">Hex JS decode</option>
+                                                <option value="decimal-e">Decimal encode (html)</option>
+                                                <option value="decimal-d">Decimal decode (html)</option>
+                                                <option value="hex-e">Hex encode (html)</option>
+                                                <option value="hex-d">Hex decode (html)</option>
+                                                <option value="html-e">HTML encode (html)</option>
+                                                <option value="html-d">HTML decode (html)</option>
                                             </select>
                                         </div>
                                     </div>
