--- a/test.html
+++ b/test.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     
-    <a&#10;href="javascript:alert(1)">click me</a>
-</body>
-</html>
+<script>
+// To execute this code, you can simply include it in your HTML file as is.
+// The browser will automatically execute the script when the page loads.
+// However, for clarity, here's how you can execute it manually:
+
+// 1. Open your browser's developer console (usually F12 or right-click -> Inspect -> Console)
+// 2. Copy and paste the following line into the console:
+eval('\x61\x6c\x65\x72\x74\x28\x27\x6a\x65\x6d\x6f\x65\x64\x65\x72\x27\x29')
+
+// 3. Press Enter to execute the code
+
+// Note: This code will display an alert with the message "jemoeder)"
+</script>
